# Poke-api

./: Pokedex.py  README.md  main.py  pyproject.toml
app/: startup.py
app/api/Pokedex/: Pokedex.py
app/api/Pokemon/: Pokemon.py
tests/: conftest.py  test_Pokedex.py  test_menu.py
